<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous" />

    <TextView
        android:id="@+id/tvSelectBusLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/select_bus_line" />

    <Spinner
        android:id="@+id/spinnerStl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/add" 

        />

</LinearLayout>