<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background"
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvProxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proxy" />

        <EditText
            android:id="@+id/etProxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port" />

        <EditText
            android:id="@+id/etPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvUseProxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_proxy" />

        </TableRow>

        <ToggleButton
            android:id="@+id/tbUseProxy"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textOn="Use Proxy"
            android:textOff="No Proxy"
            android:text="ToggleButton" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSetPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/update_password" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/previous" />

    </TableRow>    



</TableLayout>