<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:paddingBottom="30dp" />

    <TextView
        android:id="@+id/txtMessages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/hello" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:paddingBottom="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/btnHoraireRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/horaires_direct"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnHoraireCedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/horaires_cedule"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnOpus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/opus"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnAppeler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/contact_stl"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:paddingBottom="30dp" />

    <TextView
        android:id="@+id/txtMessages2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/listOfMessages" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableMessages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>

</LinearLayout>